<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/girtblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/squad_directions_top_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/squad_directions_add"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="65dp"
        android:text="@string/squad_directions_1"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="65dp"
        android:text="@string/squad_directions_2"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="65dp"
        android:text="@string/squad_directions_3"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="65dp"
        android:text="@string/squad_directions_4"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#6fdc6f"
        android:background="@drawable/sign_up"
        android:id="@+id/add_from_facebook"
        android:layout_marginTop="60dp"
        android:text="@string/sqaud_direction_addfrom_facebook"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/sqaud_direction_addfrom_contacts"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>