<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:padding="20dp">
    <ImageView
        android:layout_centerHorizontal="true"
        android:src="@drawable/git_logo"
        android:contentDescription="@string/logo_text"
        android:id="@+id/login_Logo"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:background="@drawable/edit_text_top"
        android:inputType="textEmailAddress"
        android:id="@+id/enterEmail"
        android:padding="13dp"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:hint="@string/password_hint"
        android:background="@drawable/edit_text_bottom"
        android:layout_alignStart="@+id/enterEmail"
        android:id="@+id/enterPass"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_below="@+id/enterEmail" />
    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="13dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterPass"
        android:layout_centerHorizontal="true"
        android:textColor="@color/gritgreen"
        android:background="@drawable/sign_up"
        android:id="@+id/start_Button"
        android:text="@string/sign_up"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/forgot_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/start_Button"
        android:layout_marginTop="7dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_facebook"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:alpha=".5"
        android:layout_above="@+id/facebook_Button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#4D6FAC"
        android:background="@drawable/sign_up"
        android:id="@+id/facebook_Button"
        android:text="@string/facebook"
        android:layout_above="@+id/notReady"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_ready_expore_app"
        android:id="@+id/notReady"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>