<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/profpicture1"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="3"
            android:text="@string/name1"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/plus_contact_button"
            android:id="@+id/plus1"
            android:scaleType="centerCrop"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/profpicture2"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="3"
            android:text="@string/name2"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/plus_contact_button"
            android:id="@+id/plus2"
            android:scaleType="centerCrop"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/profpicture3"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="3"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/name3"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/plus_contact_button"
            android:id="@+id/plus3"
            android:scaleType="centerCrop"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/profpicture4"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="3"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/name4"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/plus_contact_button"
            android:id="@+id/plus4"
            android:scaleType="centerCrop"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/profpicture5"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="3"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/name5"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/plus5"
            android:src="@drawable/plus_contact_button"
            android:scaleType="centerCrop"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/sign_up"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/send_squad_invites"
        android:text="@string/send_invite"/>
</LinearLayout>