<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/sign_up"
        android:id="@+id/life_check_save"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/borderLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff"
        android:text=""
        android:textAlignment="center"
        android:alpha=".1"
        android:layout_above="@+id/life_check_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="1 / 5"
        android:id="@+id/life_check_count"
        android:textAlignment="center"


        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/life_check_number_box"
        android:layout_below="@+id/life_check_prompt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_1"
            android:layout_weight="1"
            android:src="@drawable/life_check_button_1_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_2"
            android:src="@drawable/life_check_button_2_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_3"
            android:src="@drawable/life_check_button_3_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_4"
            android:src="@drawable/life_check_button_4_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_5"
            android:src="@drawable/life_check_button_5_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_6"
            android:src="@drawable/life_check_button_6_active"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/number_selector"
            android:id="@+id/life_check_button_7"
            android:src="@drawable/life_check_button_7_active"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/life_check_question_1"
        android:id="@+id/life_check_prompt"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/life_check_count"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />


</RelativeLayout>